# Gamal-Solutions-AI-Agent

./: .dockerignore  .gitignore  .replit  Dockerfile  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  run.py
.agents/memory/: MEMORY.md  platform-setup.md
app/: main.py
app/api/public/: router.py
app/api/v1/: api.py
app/core/: api_key_auth.py  config.py  database.py  deps.py
app/domains/agents/: models.py  router.py
app/domains/api_keys/: models.py  router.py  service.py
app/domains/audit/: schemas.py
app/domains/auth/: models.py
app/domains/conversations/: models.py  schemas.py
app/domains/customers/: models.py
app/domains/knowledge/: models.py  pipeline.py  router.py  schemas.py
app/domains/orchestration/: engine.py  models.py  router.py
app/domains/telegram/: analyzer.py  models.py  router.py  service.py
app/templates/: analytics.html  api_settings.html  base.html  dashboard.html  knowledge.html  status.html  telegram.html
app/web/: router.py
attached_assets/: Pasted--AI-Systems-Architect-RAG--1782556300387_1782556300393.txt  Pasted--Enterprise-Multi-Agent-Knowledge-Platform-Refactoring-_1782652083165.txt  Pasted--Enterprise-Solutions-Architect--1781280690489_1781280690501.txt  Pasted--Knowled-1781972061905_1781972061918.txt  Pasted--TELEGRAM-INTELLIGENCE-OPPORTUNITY-DETECTION-SYSTEM-MAS_1782107110764.txt
backend/: requirements.txt  run.py
backend/app/: main.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
(+48 files in other folders)
